Fix paragraph spacing inconsistency between index and exhibition views (#456)
* fix: mapping relations exhibition to remove break spaces

* fix: paragraph spacing inside hero descriptions in exhibitions and index

To fix the need to use html break tags to break paragraphs

--- a/src/assets/css/pages/hero-exhibition.css
+++ b/src/assets/css/pages/hero-exhibition.css
@@ -52,6 +52,7 @@
 }
 
 .exhibition-image-list-text {
+  --flow-space: 1em;
   max-width: 60ch;
 }
 
